--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<h1>Portfolio page for <a href="www.linkedin.com/in/michaelmaio-sde">Michael Maio - SDE/SDET</a></h1>
+<h1>Portfolio page for <a target="_blank" href="https://linkedin.com/in/michaelmaio-sde">Michael Maio - SDE/SDET</a></h1>
 
-<h2>Code samples</h2>
-<ul>
-  <li><a href="https://github.com/MichaelMaio/VendingMachine">Simple React vending machine app with Playwright tests</a></li>
-</ul>
+  <div style="margin-left: 20px;">
+    <h2>Code samples</h2>
 
-<h2>System design</h2>
-<ul>
-  <li><a href="https://github.com/MichaelMaio/AzureSensorMonitor/blob/main/Sensor%20monitoring%20system%20design.pptx">Azure sensor monitor</a> - High-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction</li>
-</ul>
+    <div style="margin-left: 20px;">
+      <h3>Vending Machine</h3>
+      A simple React vending machine web app with Playwright tests
+      <ul>
+        <li><a target="_blank" href="https://github.com/MichaelMaio/VendingMachine">Source</a></li>
+        <li><a target="_blank" href="https://michaelmaio.github.io/VendingMachine/">Web app</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div style="margin-left: 20px;">
+    <h2>System design</h2>
+
+    <div style="margin-left: 20px;">
+      <h3>Azure sensor monitor</h3>
+      A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction
+      <ul>
+        <li><a target="_blank" href="https://github.com/MichaelMaio/AzureSensorMonitor/raw/refs/heads/main/Sensor%20monitoring%20system%20design.pptx">PowerPoint deck</a></li>
+      </ul>
+    </div>
+
+  </div>
