Update index.html to include Energy Forecasting project.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
 
     <div style="margin-left: 20px;">
       <h3>Vending Machine</h3>
-      A simple React vending machine web app with Playwright tests
+      A simple React vending machine web app with Playwright tests.
       <ul>
         <li><a target="_blank" href="https://github.com/MichaelMaio/VendingMachine">Source</a></li>
         <li><a target="_blank" href="https://michaelmaio.github.io/VendingMachine/">Web app</a></li>
+      </ul>
+    </div>
+
+    <div style="margin-left: 20px;">
+      <h3>Energy Forecasting</h3>
+      An automated, containerized machine learning pipeline in Azure for predicting peak electrical load using Scikit-learn, MLflow, Docker, and Terraform that is easily portable to AWS and GCP.
+      <ul>
+        <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting/tree/cloud-deployment">Source</a></li>
       </ul>
     </div>
 
@@ -19,10 +27,11 @@
 
     <div style="margin-left: 20px;">
       <h3>Azure sensor monitor</h3>
-      A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction
+      A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
       <ul>
         <li><a target="_blank" href="https://github.com/MichaelMaio/AzureSensorMonitor/raw/refs/heads/main/Sensor%20monitoring%20system%20design.pptx">PowerPoint deck</a></li>
       </ul>
     </div>
 
   </div>
+
