--- a/index.html
+++ b/index.html
@@ -1,37 +1,66 @@
 <h1>Portfolio page for <a target="_blank" href="https://linkedin.com/in/michaelmaio-sde">Michael Maio - SDE/SDET</a></h1>
 
   <div style="margin-left: 20px;">
-    <h2>Code samples</h2>
+    <h2>AI</h2>
 
     <div style="margin-left: 20px;">
-      <h3>Vending Machine</h3>
-      A simple React vending machine web app with Playwright tests.
-      <ul>
-        <li><a target="_blank" href="https://github.com/MichaelMaio/VendingMachine">Source</a></li>
-        <li><a target="_blank" href="https://michaelmaio.github.io/VendingMachine/">Web app</a></li>
-      </ul>
-    </div>
+      <h3>Machine Learning</h3>
+	
+      <div style="margin-left: 20px;">
+        <h4>Energy Forecasting</h4>
 
-    <div style="margin-left: 20px;">
-      <h3>Energy Forecasting</h3>
-      An automated, containerized machine learning pipeline in Azure for predicting peak electrical load using Scikit-learn, MLflow, Docker, and Terraform that is easily portable to AWS and GCP.
-      <ul>
-        <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting/tree/cloud-deployment">Source</a></li>
-      </ul>
-    </div>
+        <div style="margin-left: 20px;">
+          An automated, containerized machine learning pipeline for predicting peak electrical load using AzureML, MLflow, Scikit-learn, Docker, and Terraform that is portable to AWS and GCP.
+	</div>
 
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting/tree/cloud-deployment">Source</a></li>
+        </ul>
+
+      </div>
+    </div>
   </div>
 
   <div style="margin-left: 20px;">
-    <h2>System design</h2>
+    <h2>Web Development</h2>
 
     <div style="margin-left: 20px;">
-      <h3>Azure sensor monitor</h3>
-      A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
-      <ul>
-        <li><a target="_blank" href="https://github.com/MichaelMaio/AzureSensorMonitor/raw/refs/heads/main/Sensor%20monitoring%20system%20design.pptx">PowerPoint deck</a></li>
-      </ul>
-    </div>
+      <h3>Front End</h3>
 
+      <div style="margin-left: 20px;">
+        <h4>Vending Machine</h4>
+
+        <div style="margin-left: 20px;">
+          A simple React vending machine web app with Playwright tests.
+	</div>
+
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/VendingMachine">Source</a></li>
+          <li><a target="_blank" href="https://michaelmaio.github.io/VendingMachine/">Web app</a></li>
+        </ul>
+
+      </div>
+    </div>
   </div>
 
+  <div style="margin-left: 20px;">
+    <h2>Data Engineering</h2>
+
+    <div style="margin-left: 20px;">
+      <h3>Real-time Analytics</h3>
+
+      <div style="margin-left: 20px;">
+        <h4>Azure sensor monitor</h4>
+
+
+        <div style="margin-left: 20px;">
+          A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
+        </div>
+
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/AzureSensorMonitor/raw/refs/heads/main/Sensor%20monitoring%20system%20design.pptx">PowerPoint deck</a></li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
