Update index.html with latest projects

--- a/index.html
+++ b/index.html
@@ -10,11 +10,41 @@
         <h4>Energy Forecasting</h4>
 
         <div style="margin-left: 20px;">
-          An automated, containerized machine learning pipeline for predicting peak electrical load using AzureML, MLflow, Scikit-learn, Docker, and Terraform that is portable to AWS and GCP.
+          An automated, secure, containerized machine learning pipeline for predicting peak electrical load using Python, YAML, AzureML, MLflow, Scikit-learn, Docker, Terraform, and GitHub Actions, that is portable to AWS and GCP.
 	</div>
 
         <ul>
-          <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting/tree/cloud-deployment">Source</a></li>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting">Source</a></li>
+        </ul>
+
+      </div>
+    </div>
+
+    <div style="margin-left: 20px;">
+      <h3>AI Agents</h3>
+	
+      <div style="margin-left: 20px;">
+        <h4>Bank Voice Agent</h4>
+
+        <div style="margin-left: 20px;">
+          An AI agent using the ReAct (Reason + Act) design pattern, C#, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
+	</div>
+
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/BankVoiceAgent">Source</a></li>
+        </ul>
+
+      </div>
+
+      <div style="margin-left: 20px;">
+        <h4>Bank Chat Agent</h4>
+
+        <div style="margin-left: 20px;">
+          An AI agent using the ReAct (Reason + Act) design pattern, Python, and Meta's Llama AI model to handle customer interaction with a bank's chat bot.
+	</div>
+
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/BankChatAgent">Source</a></li>
         </ul>
 
       </div>
@@ -31,7 +61,7 @@
         <h4>Vending Machine</h4>
 
         <div style="margin-left: 20px;">
-          A simple React vending machine web app with Playwright tests.
+          A simple React vending machine web app written in TypeScript with automated Playwright tests.
 	</div>
 
         <ul>
@@ -54,7 +84,7 @@
 
 
         <div style="margin-left: 20px;">
-          A high-level, sample Azure solution for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
+          A high-level, sample Azure design for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
         </div>
 
         <ul>
