--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h4>Bank Voice Agent</h4>
 
         <div style="margin-left: 20px;">
-          An AI agent using the ReAct (Reason + Act) design pattern, C#, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
+          An Python AI agent using the ReAct (Reason + Act) design pattern with an MCP server, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
 	</div>
 
         <ul>
-          <li><a target="_blank" href="https://github.com/MichaelMaio/BankVoiceAgent">Source</a></li>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/bank_voice_agent">Source</a></li>
         </ul>
 
       </div>
@@ -81,4 +81,5 @@
       </div>
     </div>
   </div>
+
 
