--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h4>Energy Forecasting</h4>
 
         <div style="margin-left: 20px;">
-          An automated, secure, containerized machine learning pipeline for predicting peak electrical load using Python, YAML, AzureML, MLflow, Scikit-learn, Docker, Terraform, and GitHub Actions, that is portable to AWS and GCP.
+          An automated, secure, containerized machine learning pipeline for predicting peak electrical load using Python, AzureML, MLflow, Scikit-learn, Docker, Terraform, YAML, and GitHub Actions.
 	</div>
 
         <ul>
@@ -27,7 +27,7 @@
         <h4>Bank Voice Agent</h4>
 
         <div style="margin-left: 20px;">
-          An Python AI agent using the ReAct (Reason + Act) design pattern with an MCP server, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
+          A Python AI agent using the ReAct (Reason + Act) design pattern with an MCP server, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
 	</div>
 
         <ul>
@@ -81,5 +81,6 @@
       </div>
     </div>
   </div>
+
 
 
