--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
   <div style="margin-left: 20px;">
     <h2>AI</h2>
 
-    <div style="margin-left: 20px;">
-      <h3>Machine Learning</h3>
-	
+	<div style="margin-left: 20px;">
+      <h3>Agents</h3>
+
       <div style="margin-left: 20px;">
-        <h4>Energy Forecasting</h4>
+        <h4>Diagnostic agent for bugs in code</h4>
 
         <div style="margin-left: 20px;">
-          An automated, secure, containerized machine learning pipeline for predicting peak electrical load using Python, AzureML, MLflow, Scikit-learn, Docker, Terraform, YAML, and GitHub Actions.
-	</div>
+          Simple demo of how a Python AI agent can employ the ReAct (Reason-Action) design pattern, Meta's Llama model, an MCP server, and a TypeScript RAG pipeline to automatically investigate Playwright test failures and fix bugs in a React.js web app.
+		</div>
 
         <ul>
-          <li><a target="_blank" href="https://github.com/MichaelMaio/energy_forecasting">Source</a></li>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/ai_diagnostic_agent">Source</a></li>
+        </ul>
+
+      </div>
+		
+      <div style="margin-left: 20px;">
+        <h4>Voice agent for call center</h4>
+
+        <div style="margin-left: 20px;">
+          Simple demo of how a Python AI agent can employ the ReAct (Reason-Action) design pattern, an Open AI LLM, Azure AI Speech services, and an MCP server to handle customer interaction with a bank's call center.
+		</div>
+
+        <ul>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/ai_voice_agent">Source</a></li>
         </ul>
 
       </div>
     </div>
-
+	  
     <div style="margin-left: 20px;">
-      <h3>AI Agents</h3>
+      <h3>Machine Learning</h3>
 	
       <div style="margin-left: 20px;">
-        <h4>Bank Voice Agent</h4>
+        <h4>Time-series forecasting</h4>
 
         <div style="margin-left: 20px;">
-          A Python AI agent using the ReAct (Reason + Act) design pattern with an MCP server, Open AI, and Azure AI Speech services to handle customer interaction with a bank's call center.
-	</div>
+          Production-ready, automated machine learning pipeline for building an electrical transformer load forecasting model using Python, YAML, AzureML, MLflow, Prophet, Scikit-learn, Docker, Terraform, and GitHub Actions.
+	    </div>
 
         <ul>
-          <li><a target="_blank" href="https://github.com/MichaelMaio/bank_voice_agent">Source</a></li>
+          <li><a target="_blank" href="https://github.com/MichaelMaio/ml_time_series_forecasting">Source</a></li>
         </ul>
 
       </div>
@@ -48,8 +61,8 @@
         <h4>Vending Machine</h4>
 
         <div style="margin-left: 20px;">
-          A simple React vending machine web app written in TypeScript with automated Playwright tests.
-	</div>
+          A very simple React vending machine simulator web app with automated Playwright tests.
+	    </div>
 
         <ul>
           <li><a target="_blank" href="https://github.com/MichaelMaio/VendingMachine">Source</a></li>
@@ -69,7 +82,6 @@
       <div style="margin-left: 20px;">
         <h4>Azure sensor monitor</h4>
 
-
         <div style="margin-left: 20px;">
           A high-level, sample Azure design for monitoring hundreds of thousands of sensors with real-time visualization, alerts, ticketing, and AI trend prediction.
         </div>
@@ -81,6 +93,3 @@
       </div>
     </div>
   </div>
-
-
-
